<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowCountries"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:id="@+id/foto"
        android:layout_width="800px"
        android:layout_height="800px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/texto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/texto1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hola"
            android:textAlignment="center"
            android:paddingLeft="10dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/texto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_ingles"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/texto2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hola"
            android:textAlignment="center"
            android:paddingLeft="10dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/texto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capital"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/texto3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hola"
            android:textAlignment="center"
            android:paddingLeft="10dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/texto4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siglas"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/texto4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hola"
            android:textAlignment="center"
            android:paddingLeft="10dp"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>